<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".MainActivity" >

    <Button
            android:id="@+id/mCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTakePhoto"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.05"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"/>

    <Button
            android:id="@+id/mGalleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonSelectPhoto"
            app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
            app:layout_constraintEnd_toStartOf="@+id/mDetectButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mCameraButton"
            app:layout_constraintStart_toStartOf="parent" />


    <ImageView
            android:id="@+id/mPhotoImageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/descriptionImage"
            app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@android:color/darker_gray" />

    <Button
            android:id="@+id/mDetectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/buttonDiagnose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/mSolutionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/solution"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8000"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="524dp" />

    <TextView
            android:text="@string/defaultImage"
            android:layout_width="0dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:id="@+id/mResultTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:textStyle="bold"
            android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>